syntax = "proto3";

import "google/protobuf/timestamp.proto";

package Throneteki.WebService;

enum CardType {
    Draw = 0;
    Plot = 1;
    Banner = 2;
}

message BlockListEntry {
	string UserId = 1;
	string Username = 2;
}

message LobbyFaction {
	string Code = 1;
	string Name = 2;
}  

message LobbyCard {
	string Code = 1;
    string Type = 2;
    string Name = 3;
    bool Unique = 4;
    string Faction = 5;
    bool Loyal = 6;
    int32 Cost = 7;
    int32 Strength = 8;
    string Text = 9;
    string Flavor = 10;
    int32 DeckLimit = 11;
    string Illustrator = 12;
    string PackCode = 13;
    string Label = 14;
    string Icons = 15;
    string Traits = 16;
    int32 Income = 17;
    int32 Claim = 18;
    int32 Reserve = 19;
    int32 Initiative = 20;
    bool Military = 21;
    bool Intrigue = 22;
    bool Power = 23;
    string ImageUrl = 24;
}

message LobbyDeckCard {
	int32 Count = 1;
	LobbyCard Card = 2;
}

message LobbyDeck {
	int32 Id = 1;
	string Name = 2;
	string Owner = 3;
	LobbyFaction Faction = 4;
	LobbyCard Agenda = 5;
    repeated LobbyDeckCard DrawCards = 6;
	repeated LobbyDeckCard PlotCards = 7;
	repeated LobbyCard BannerCards = 8;
}

message LobbyMessage {
	int32 Id = 1;
    string Message = 2;
	ThronetekiUser User = 3;
	google.protobuf.Timestamp Time = 4;
    bool Deleted = 5;
	ThronetekiUser Deletedby = 6;
}

message ThronetekiUserSettings {
	map<string, bool> ActionWindows = 1;
	string Background = 2;
	string CardSize = 3;
	bool ChooseCards = 4;
	bool ChooseOrder = 5;
	string CustomBackgroundUrl = 6;
	bool PromptDupes = 7;
	bool TimerAbilities = 8;
	bool TimerEvents = 9;
	int32 WindowTimer = 10;
}

message ThronetekiUser {
	string Id = 1;
	string Username = 2;
	string Avatar = 3;
	repeated BlockListEntry BlockList = 4;
	google.protobuf.Timestamp Registered = 5;
	string Role = 6;
	ThronetekiUserSettings Settings = 7;
}